--- a/nginx.conf
+++ b/nginx.conf
@@ -16,13 +16,29 @@ http {
     access_by_lua_file  /opt/app/access.lua;
     server {
         listen       80;
-        server_name  localhost;
+        server_name  a.demo.com;
         charset utf-8;
         root html;
         default_type text/html;
         location / {
            content_by_lua_block {
-             ngx.say("demoapp location")
+             ngx.say("a.demo.com")
+          }
+        }
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   html;
+        }
+    }
+     server {
+        listen       80;
+        server_name   b.demo.com;
+        charset utf-8;
+        root html;
+        default_type text/html;
+        location / {
+           content_by_lua_block {
+             ngx.say("b.demo.com")
           }
         }
         error_page   500 502 503 504  /50x.html;
